--- a/assets/package.json
+++ b/assets/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "parcel-bundler": "^1.10.3",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "growl": ">=1.10.0"
   },
   "devDependencies": {
     "node-elm-compiler": "^5.0.1"
